--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Maria Alejandra</title>
     <link rel="stylesheet" href="invitacion.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
 
